# SpComm3D

./: .gitignore  CMakeLists.txt  README.md  benchSddmm  flake.nix
miniapp/: CMakeLists.txt  bench_sddmm.cpp  bench_spmm.cpp  main_combined.cpp  test.cpp  test_output.cpp
scripts/: convert2bin-par.sh  matrices.txt  simple.mtx
src/: comm_stats.cpp  core_ops.cpp  core_ops.hpp  dcomm_setup.cpp  distribute.hpp  distributed_comp.cpp  parallel_io.hpp
src/Communicator/: comm_setup.cpp
testing/: CMakeLists.txt  README.md  compare_matrices.cpp  compare_mtx.hpp
testing/matrices/: README.md
tools/: CMakeLists.txt  convert_bin_to_mtx.cpp
