cmake_minimum_required(VERSION 3.1)

###############################################################################
## CXX Setup ##################################################################
###############################################################################

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_COMPILER mpic++) # default, change in subdir if necessary

# to change build type (for checking optimization flags), do:
# cmake -DCMAKE_BUILD_TYPE=Release (acc. to stackoverflow)
# set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
set(CMAKE_EXPORT_COMPILE_COMMANDS on)

###############################################################################
## project setup ##############################################################
###############################################################################

project(SpCOMM3D)

###############################################################################
## file globbing ##############################################################
###############################################################################

file(GLOB_RECURSE GLOB_SOURCES src/*.cpp)
include_directories(src) # outdated method but not a big deal I think (Manuel)

###############################################################################
## target definitions #########################################################
###############################################################################

add_subdirectory(miniapp)

###############################################################################
## dependencies ###############################################################
###############################################################################

add_subdirectory(thirdparty)

###############################################################################
## testing ####################################################################
###############################################################################

add_subdirectory(testing)