###############################################################################
## CXX Setup ##################################################################
###############################################################################

set(CMAKE_CXX_COMPILER mpic++)

###############################################################################
## target definitions #########################################################
###############################################################################

add_executable(conv2bin read_convert_mm.cpp)